== Changelog 1.0.0 ==

=== new features ===
*   Queue functionality
*   Check state of MPD and decide what to do if stopped etc
*   More information

== Changelog 0.9.7 ==

=== new features ===
*   We're now using a separate configuration file.
*   Basic installation script added after complains.
*   Basic installation script for the modules is also added.

=== bug fixes ===
*   One nasty bug in &favlist - $playlistdir.$playlist instead of
... "$playlistdir/$playlist".
*   Spelling failure in the help text.

== Changelog 0.9.6 ==

=== bug fixes ===
*   pimpd -play 5 didn't return the fifth track to STDOUT, but the track that
... was playing just before that.

== Changelog 0.9.5 ==

==== new features ====
*   When some output spans over 80 columns, we'll truncate it from now on. 
... There is a reason why !badware do it like this.
*   Implemented lyrics support. The idea and how to do it is shamelessy stolen
... from ncmpcpp's source.
*   &information() - Mark if the bitrate is low.

==== bug fixes ====
*   &show_playlist() -  When calling subroutines directly from GetOptions,
... GetOptions will pass the (stringified) name of the function to the 
... function itself. Because of this, we'll get something like 'show_playlist'
... when we shift of values from @_. Naturally, this is not what we want.
... Therefore, I've implemented some basic sanity checks.
*   While rewriting, I noticed that some variables could possibly return undef
... if the tags are missing - fixed.

==== other  ====
*   Completely rewritten. Got rid of some ugly pieces of code.
*   &show_playlist() - reworked the output to follow standard rules of maximum
... 80 columns. I removed the album from the output since having all three
... fields sharing 80 columns would make it almost unreadable.
*   Changelog no longer maintained in the code, as you can see. :)
*   A lot of cleanup is done regarding variables. Why declare variables holding
... the same value in almost every function... stupidity.