@@ -2,6 +2,8 @@
 
 === new features ===
 *   Queue functionality
+*   &ctrl - pimpd shell. For simple things like next/prev, toggling of i.e
+... random/repeat/crossfade state. 
 *   Check state of MPD and decide what to do if stopped etc
 *   More information
 
